--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    @apply text-gray-800 bg-gray-200 p-0 m-0 min-h-screen
+}
